--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     />
     <title>Performance React</title>
   </head>
-  <body>
+  <body style="background: #838587" >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
